--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
@@ -22,6 +24,8 @@
   },
   "dependencies": {
     "@prisma/client": "6.1.0",
-    "express": "^4.21.2"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
