--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "6.1.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.24.1"
   }
 }
