--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.1.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
@@ -35,6 +36,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "pino": "^9.6.0",
     "zod": "^3.24.1"
   }
 }
