--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "tsx watch src/index.ts",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
