--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "prepare": "husky",
+    "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
   },
