feat: restructure database schema and update README for clarity
- Removed outdated migration files and added new initial migration.
- Updated README to reflect accurate project details and environment setup.
- Adjusted Prisma schema for better clarity and consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "node-auth",
+  "name": "jstack-jwt-auth",
+  "description": "Implementation of JWT authentication with RBAC (Role-Based Access Control) in a Node.js API.",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,7 +15,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Implementation of JWT authentication with RBAC (Role-Based Access Control) and refresh token in a Node.js API.",
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
